@@ -1,3 +1,5 @@
+2009-01-19 Fix bug in quiver argument handling. - EF
+
 2009-01-19 Fix bug in backend_gtk: don't delete nonexistent toolbar. - EF
 
 2009-01-16 Implement bbox_inches option for savefig. If bbox_inches is
